# esmf-sdk-py-aspect-model-loader

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  CONVENTIONS.md  NOTICE.md  README.md
core/esmf-aspect-meta-model-python/: README.md  pyproject.toml  tox.ini
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/: __init__.py  samm_cli_functions.py  samm_meta_model.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/base/: README.md  __init__.py  aspect.py  base.py  bound_definition.py  cache_strategy.py  either.py  event.py  has_properties.py  has_urn.py  is_described.py  operation.py  property.py  property_func.py  quantity_kind.py  structure_element.py  unit.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/base/characteristics/: characteristic.py  code.py  either.py  enumeration.py  single_entity.py  state.py  structured_value.py  trait.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/base/contraints/: __init__.py  constraint.py  encoding_constraint.py  fixed_point_constraint.py  language_constraint.py  length_constraint.py  locale_constraint.py  range_constraint.py  regular_expression_constraint.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/base/data_types/: abstract_entity.py  complex_type.py  data_type.py  entity.py  scalar.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/impl/: README.md  __init__.py  base_impl.py  default_aspect.py  default_either.py  default_event.py  default_operation.py  default_property.py  default_quantity_kind.py  default_unit.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/impl/characteristics/: default_characteristic.py  default_code.py  default_either.py  default_enumeration.py  default_single_entity.py  default_state.py  default_structured_value.py  default_trait.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/impl/constraints/: default_constraint.py  default_encoding_constraint.py  default_fixed_point_constraint.py  default_language_constraint.py  default_length_constraint.py  default_locale_constraint.py  default_range_constraint.py  default_regular_expression_constraint.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/impl/data_types/: __init__.py  default_abstract_entity.py  default_complex_type.py  (+3 more)
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/loader/: README.md  aspect_loader.py  default_element_cache.py  instantiator_base.py  meta_model_base_attributes.py  model_element_factory.py  rdf_helper.py  samm_graph.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/resolver/: README.md  aspect_meta_model_resolver.py  base.py  meta_model.py  namespace.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/samm_aspect_meta_model/: download_bamm_branch.py  download_bamm_release.py  download_samm_branch.py  download_samm_release.py  github_file.py  github_folder.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/vocabulary/: BAMM.py  BAMMC.py  BAMME.py  SAMM.py  SAMMC.py  SAMME.py  UNIT.py  namespace.py
core/esmf-aspect-meta-model-python/scripts/: constants.py  download_samm_cli.py  download_test_models.py
core/esmf-aspect-meta-model-python/scripts/samm/: download_samm_branch.py  github_file.py  github_folder.py
core/esmf-aspect-meta-model-python/tests/: test_aspect_functionality.py  test_characteristics.py  test_constraints.py  test_entities.py  test_event.py  test_general.py  test_subclasses.py  test_vocabulary.py
core/esmf-aspect-meta-model-python/tests/integration/: test_aspect_functionality.py  test_characteristics.py  test_constraints.py  test_entities.py  test_event.py  test_general.py  test_resolve_elements_referencies.py  test_subclasses.py  test_vocabulary.py
core/esmf-aspect-meta-model-python/tests/unit/: test_samm_cli_functions.py  test_samm_meta_model.py
core/esmf-aspect-meta-model-python/tests_invalid/: test_constraints.py
core/esmf-aspect-meta-model-python/tests_invalid/resources/: trait_missing_base_characteristic.ttl  trait_missing_constraint.ttl
(+464 files in other folders)
