[tool.poetry]
name = "esmf-aspect-meta-model-python"
version = "0.0.1"
description = ""
authors = [
    "Aghyad Farrouh <aghyad.farrouh@systecs.com>",
    "Georg Schmidt-Dumont <georg.schmidt-dumont@de.bosch.com>",
    "Nico Makowe <nico.makowe@de.bosch.com>",
]
include = ["esmf_aspect_meta_model_python/samm_aspect_meta_model/samm/**/*"]

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.2.0"
zipfile37 = "^0.1.3"
requests = "^2.28.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1"
mypy = "^0.950"
black = "^22.6.0"
types-requests = "^2.28.8"

[tool.poetry.scripts]
download-samm-release = "esmf_aspect_meta_model_python.samm_aspect_meta_model.download_samm_release:main"
download-samm-branch = "esmf_aspect_meta_model_python.samm_aspect_meta_model.download_samm_branch:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
show_error_codes = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "esmf_aspect_meta_model_python.loader.*"
ignore_errors = true