[tool.poetry]
name = "esmf-aspect-meta-model-python"
version = "0.0.1"
description = ""
authors = [
    "Aghyad Farrouh <aghyad.farrouh@systecs.com>",
    "Georg Schmidt-Dumont <georg.schmidt-dumont@de.bosch.com>",
    "Nico Makowe <nico.makowe@de.bosch.com>",
]
include = ["esmf_aspect_meta_model_python/samm_aspect_meta_model/samm/**/*"]

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.2.0"
zipfile37 = "^0.1.3"
requests = "^2.28.1"
tox = "^4.5.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
coverage = "^7.2.5"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest = "^7.1"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.7"
types-requests = "^2.30.0.0"


[tool.pytest.ini_options]
cache_dir = ".pytest_cache"

[tool.poetry.scripts]
download-samm-release = "esmf_aspect_meta_model_python.samm_aspect_meta_model.download_samm_release:main"
download-samm-branch = "esmf_aspect_meta_model_python.samm_aspect_meta_model.download_samm_branch:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
