[tool.poetry]
name = "esmf-aspect-model-loader"
version = "2.1.1"
description = "Load Aspect Models based on the Semantic Aspect Meta Model"
authors = [
    "Eclipse Semantic Modeling Framework",
    "Hanna Shalamitskaya <external.Hanna.Shalamitskaya@de.bosch.com>",
    "Andreas Textor <Andreas.Textor@de.bosch.com> ",
    "Georg Schmidt-Dumont <Georg.Schmidt-Dumont@de.bosch.com>",
    "Nico Makowe",
    "Aghyad Farrouh",
]
packages = [{include = "esmf_aspect_meta_model_python"}]
include = ["esmf_aspect_meta_model_python/samm_aspect_meta_model/samm/**/*"]
license = "MPL-2.0"
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
readme = "README.md"
keywords = ["samm", "esmf", "digital twin", "idta", "model loader", "semantic api", "semantics", "aspect"]
homepage = "https://projects.eclipse.org/projects/dt.esmf"
repository = "https://github.com/bci-oss/esmf-sdk-py-aspect-model-loader"
documentation = "https://eclipse-esmf.github.io/python-sdk-guide/index.html"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.2.0"
requests = "^2.28.1"
tox = "^4.5.2"
zipfile37 = "^0.1.3"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
coverage = "^7.2.5"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest = "^7.1"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.7"
types-requests = "^2.30.0.0"


[tool.pytest.ini_options]
cache_dir = ".pytest_cache"

[tool.poetry.scripts]
download-samm-release = "esmf_aspect_meta_model_python.samm_aspect_meta_model.download_samm_release:main"
download-samm-branch = "esmf_aspect_meta_model_python.samm_aspect_meta_model.download_samm_branch:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
